# postul

./: .all-contributorsrc  .env.example  README.md  schema.json
apps/mobile/: app.json  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
apps/mobile/app/: _layout.tsx
apps/mobile/app/(tabs)/: index.tsx
apps/mobile/app/project/: [id].tsx
apps/mobile/app/project/[id]/: flyer.tsx  survey-post.tsx
apps/mobile/components/: bottom-navigation.tsx  glass-card.tsx  mode-selection-bottom-sheet.tsx  mode-switch-button.tsx  source-avatar.tsx
apps/mobile/components/flyer/: flyer-chat-input.tsx  flyer-image-viewer.tsx
apps/mobile/components/survey-post/: editable-post-input.tsx  post-preview.tsx
apps/mobile/constants/: api.ts
apps/mobile/services/: api.ts
docs/: prd.md  rlhf-pipeline.md  rlhf_pipeline.md
migrations/: 001_create_surveys.sql
server/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  config.py  database.py  dependencies.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  schema.py
server/bot/: main.py
server/bot/commands/: evaluate.py  survey.py
server/routers/: __init__.py  flyers.py  ideas.py  surveys.py  tts.py
server/scripts/: download_supertonic_models.py
server/services/: __init__.py  ai_service.py  flyer_service.py  og_service.py  qr_service.py  supabase_service.py  tts_helper.py  tts_service.py
