[project]
name = "server"
version = "0.1.0"
description = "FastAPI server for Postul - AI-powered startup idea validation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "supabase>=2.0.0",
    "openai>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "greenlet>=3.2.4",
    "onnxruntime>=1.18.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "discord.py",
    "qrcode[pil]>=7.4.2",
    "Pillow>=10.0.0",
    "google-genai>=1.52.0",
]

[project.scripts]
download-supertonic-models = "scripts.download_supertonic_models:main"
